[project]
name = "signal-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "numpy>=2.4.1",
    "pyedflib>=0.1.42",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]
